...
                key: Key('nav-torch'),
                icon: Icon(Icons.flashlight_on_outlined),
                selectedIcon: Icon(Icons.flashlight_on),
                label: 'Torch',
              ),
              NavigationDestination(
                key: Key('nav-signal'),
                icon: Icon(Icons.flare_outlined),
                selectedIcon: Icon(Icons.flare),
                label: 'Signal',
              ),
              NavigationDestination(
                key: Key('nav-screen'),
                icon: Icon(Icons.palette_outlined),
                selectedIcon: Icon(Icons.palette),
                label: 'Screen',
              ),
            ],
          ),
...
